--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "johnbot",
+  "name": "mattbot",
   "private": true,
   "version": "1.0.0",
   "description": "",
@@ -10,21 +10,12 @@
     "dev:debug": "ENV=DEBUG nodemon src/main.ts"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
-    "@discordjs/voice": "^0.7.5",
-    "@types/fluent-ffmpeg": "^2.1.20",
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "libsodium-wrappers": "^0.7.9",
     "module-alias": "^2.2.2",
     "opusscript": "^0.0.8",
     "redis": "^4.0.1",
-    "tsconfig-paths": "^3.12.0",
-    "youtube-search": "^1.1.6",
-    "ytdl": "^1.4.1",
-    "ytdl-core": "^4.10.0",
-    "ytpl": "^2.2.3"
+    "tsconfig-paths": "^3.12.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
