--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
     "module-alias": "^2.2.2",
+    "mongoose": "^6.2.1",
     "opusscript": "^0.0.8",
     "redis": "^4.0.1",
     "tsconfig-paths": "^3.12.0"
@@ -27,8 +28,8 @@
   },
   "_moduleAliases": {
     "@util": "dist/util",
-    "controllers": "controllers"
-    
+    "@models": "dist/models",
 
+    "controllers": "controllers"
   }
 }
